calculator_service/calculator.h

#ifndef CALCULATOR_H
#define CALCULATOR_H

double add(double a, double b);
double subtract(double a, double b);
double multiply(double a, double b);
double divide(double a, double b);
double power(double base, double exp);
double square_root(double num);
double modulus(double a, double b);

#endif